[package]
name = "lp-miner-gaplo"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
rand = "0.8"
secp256k1 = { version = "0.27", features = ["recovery"] }
serde_json = "1.0"
once_cell = "1.19"
dashmap = "5.5"